test/functions/deitz/test_bad_function.good
Error: Unresolved call 'foo(:float)' (test_bad_function.chpl:5)
Candidates are:
  foo(i: int) (test_bad_function.chpl:1)
